fixed cut off footer text in mobile

--- a/style.css
+++ b/style.css
@@ -515,5 +515,6 @@ footer {
 
   .textmsg  {
     font-size:medium;
+    margin-bottom: 1rem;
   }
 }
